#32 TermPackage now includes occurrances count for related terms
